# desafio_Infog2

./: README.md  alembic.ini  database.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 0bc5c8b0a83f_ajuste_na_lista_de_pedidos.py  1252b641855e_adição_dos_pedidos.py  18f68dd311da_add_user_model.py  27073440c909_add_deleted_column_to_user.py  27d9051637b7_ajuste_na_lista_de_pedidos.py  39b61d31148c_ajuste_na_lista_de_pedidos.py  5a098d07e777_add_deleted_column_to_user.py  9b5bb749a080_alteracao_campo_client_adicao_nome.py  aa65246e9a48_alteração_no_valor.py  b4b44537415d_alteracao_campo_passowrd_para_senha.py  d5f5606d2869_adicao_da_tabela_de_produtos.py  d84aacc4472c_ajuste_na_lista_de_pedidos.py  f0d31e11c90e_ajuste_na_tabela_de_produtos.py
apps/clients/: clients.py  main.py
apps/infog2/: auth.py
apps/pedidos/: pedidos.py
apps/produtos/: produtos.py
helpers/: security.py  validacao.py
infog2/: main.py
