[tool.poetry]
name = "infog2"
version = "0.1.0"
description = "Projeto para infog2r"
authors = ["Gabryel Mendes <gabryelmendecz@gmail.com>"]
packages = [{include = "infog2"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
alembic = ">=1.16.1,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
pyjwt = ">=2.10.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
